# algos

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  readme.md  searching.hpp  sorting.hpp  test.sh
Algos.jl/: Project.toml  README.md
Algos.jl/src/: Algos.jl  Searching.jl  Sorting.jl
Algos.jl/test/: runtests.jl
CSAlgos/: .gitignore  CSAlgos.sln  README.md
CSAlgos/CSAlgos/: Class1.cs  Searching.cs  Sorting.cs
CSAlgos/CSAlgosTest/: CSAlgosTest.csproj  SearchingTest.cs  SortingTest.cs  SortingTests.cs  TestUtils.cs  UnitTest1.cs
JAlgos/: README.md  settings.gradle
JAlgos/lib/src/main/java/jalgos/: Library.java  Searching.java  Sorting.java
JAlgos/lib/src/test/java/jalgos/: LibraryTest.java  SearchingFunction.java  SearchingTest.java  SortingFunction.java  SortingTest.java  Util.java
KTAlgos/: .gitignore  README.md  settings.gradle.kts
KTAlgos/lib/src/main/kotlin/org/ktalgos/: Library.kt  Searching.kt
KTAlgos/lib/src/test/kotlin/org/ktalgos/: LibraryTest.kt
algos-lib/: Cargo.toml
algos-lib/src/: lib.rs
algos-rs/: Cargo.toml  LICENSE  README.md
algos-rs/src/: lib.rs  search.rs  sort.rs  sorting.rs
algos-rs/tests/: searching_tests.rs  sorting_tests.rs
algos/misc/: dynamic-fibonacci.hpp
algos/searching/: binary_search.hpp  linear_search.hpp  readme.md  ternary_search.hpp
algos/sorting/: insertion_sort.hpp  merge_sort.hpp  quick_sort.hpp  readme.md
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cpp-algos/: .gitignore  CMakeLists.txt  README.md  test.sh
cpp-algos/include/: search.hpp  searching.hpp  sort.hpp  sorting.hpp
cpp-algos/include/misc/: dynamic_fibonacci.hpp
cpp-algos/include/searching/: README.md  linear_search.hpp  quickselect.hpp  ternary_search.hpp
cpp-algos/include/sorting/: insertion_sort.hpp
cpp-algos/test/: test.cpp
go-algos/: GoAlgos.go  README.md  go.mod
halgos/: CHANGELOG.md  README.md  halgos.cabal  package.yaml
halgos/app/: Main.hs
halgos/src/: Searching.hs  Sorting.hs
halgos/test/: Spec.hs
include/misc/: README.md  dynamic_fibonacci.hpp
include/searching/: README.md  binary_search.hpp  kth_statistic_search.hpp
include/sorting/: README.md  merge_sort.hpp  quick_sort.hpp
pseudocode/: README.md
py-algos/: README.md  pyproject.toml  setup.cfg  test.py
py-algos/py_algos/: searching.py  sorting.py
src/: lib.rs  search.rs  sort.rs
test/: Cargo.toml  readme.md  test.cpp
test/src/: main.rs
