[package]
name = "algos_lib"
version = "0.1.0"
authors = ["Aidan Bailey"]
edition = "2021"
description = "Some common algorithms"
readme = "README.md"
homepage = "https://github.com/aidanjbailey/algos"
repository = "https://github.com/aidanjbailey/algos"
license-file = "LICENSE.txt"
keywords = ["algorithms"]

[dev-dependencies]
test-case = "3.2.1"
paste = "1.0.14"
partial_application = "0.2.1"
