[metadata]
name = py-algos
version = 0.0.0.dev0
author = Aidan Bailey
#author_email =
description = A collection of common algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aidanjbailey/algos
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
